Input value/placeholder is not redrawn when the input height grows https://bugs.webkit.org/show_bug.cgi?id=113845

Reviewed by Ojan Vafai.

Source/WebCore:

Test: fast/forms/text/text-height-grow.html

* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::styleDidChange):
We need relayout of the inner text element.

LayoutTests:

* fast/forms/text/text-height-grow-expected.html: Added.
* fast/forms/text/text-height-grow.html: Added.


Canonical link: https://commits.webkit.org/132261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147602 268f45cc-cd09-0410-ab3c-d52691b4dbfc