Source/WebCore/rendering/RenderTextControlSingleLine.cpp
@@ -252,6 +252,9 @@ void RenderTextControlSingleLine::styleDidChange(StyleDifference diff, const Ren
         containerRenderer->style()->setHeight(Length());
         containerRenderer->style()->setWidth(Length());
     }
+    RenderObject* innerTextRenderer = innerTextElement()->renderer();
+    if (innerTextRenderer && diff == StyleDifferenceLayout)
+        innerTextRenderer->setNeedsLayout(true, MarkOnlyThis);
     if (HTMLElement* placeholder = inputElement()->placeholderElement())
         placeholder->setInlineStyleProperty(CSSPropertyTextOverflow, textShouldBeTruncated() ? CSSValueEllipsis : CSSValueClip);
     setHasOverflowClip(false);
